--- a/public/styles/forms.css
+++ b/public/styles/forms.css
@@ -1,7 +1,8 @@
 form legend{
     text-align: center;
-    margin: 5px;
-  padding: 10px;
+    margin: 10px;
+  padding: 5px;
+  font-weight: bold;
 }
   form {
     text-align: center;
@@ -24,4 +25,7 @@ form .button-submit {
 
 form label {
 	font-weight: bold;
+}
+form span {
+  color: red
 }
