--- a/public/styles/catalog.css
+++ b/public/styles/catalog.css
@@ -5,10 +5,14 @@
 }
 
 .catalog section ul{
-    flex-direction:column;
+  margin: 10px 20px ;
+  padding: 10px 20px ;
+    flex-direction:row;
     display: flex;
 }
 .catalog section ul li{
+  margin: 10px 20px ;
+  padding: 10px 20px ;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   max-width: 300px;
   display: flex;
@@ -30,7 +34,7 @@
     color: black;
   }
   .catalog section ul li img{
-      width: 100px;
+      width: 300px;
   }
   .catalog section p {
     font-weight: bold;
