--- a/public/styles/forms.css
+++ b/public/styles/forms.css
@@ -1,11 +1,13 @@
 form legend{
     text-align: center;
-    margin: 10px;
-  padding: 5px;
+    margin:  10px;
+  padding: 10px ;
   font-weight: bold;
 }
   form {
     text-align: center;
+    margin:  10px 200px 100px 300px;
+    padding: 10px 200px 100px 100px;
 }
 form .button-submit {
     text-decoration-line: none;
@@ -21,7 +23,10 @@ form .button-submit {
     background-color: #ddd;
     color: black;
   }
-  
+  fieldset{
+    margin:  10px 20px;
+    padding: 40px 20px;
+  }
 
 form label {
 	font-weight: bold;
