--- a/public/styles/all.css
+++ b/public/styles/all.css
@@ -1,7 +1,7 @@
 body{
     background-color:rgb(231, 230, 230);
 }
-#site-footer{
+footer{
    padding: 2px 5px 2px 5px;
    margin: 200px 5px 2px 5px;
    background-color:rgb(99, 98, 98) ;
