--- a/public/styles/all.css
+++ b/public/styles/all.css
@@ -1,5 +1,6 @@
 body{
     background-color:rgb(231, 230, 230);
+    /* background-image: url(https://i.natgeofe.com/n/22e86334-d123-4a21-8180-f694bf2632d7/3563728_16x9.jpg); */
 }
 footer{
    padding: 2px 5px 2px 5px;
