--- a/public/styles/catalog.css
+++ b/public/styles/catalog.css
@@ -1,43 +1,84 @@
-#catalog h1{
+.welcome{
+  background-image: url(https://i.natgeofe.com/n/22e86334-d123-4a21-8180-f694bf2632d7/3563728_16x9.jpg);
+  height: 50vh;
+  background-repeat: none;
+  background-position: center center;
+  background-size: cover;
+  position:relative;
+}
+#descr{
+  font-family: Helvetica, sans-serif;
+  color: #E7E6E6;
     text-align: center;
     margin: 5px;
-  padding: 10px;
-}
+    padding: 20px;
+    width: 700px;
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    line-height: 1.5;
+    letter-spacing: 1px;
+    font-size: 18px;
 
-.catalog section ul{
-  margin: 10px 20px ;
-  padding: 10px 20px ;
-    flex-direction:row;
-    display: flex;
 }
-.catalog section ul li{
-  margin: 10px 20px ;
-  padding: 10px 20px ;
+#transp{
+  width: 100%;
+  height: 100%;
+  background-color: gray;
+  position:absolute;
+  opacity: 0.5;
+  top:0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+.catalog .list-items ul{
+  margin: 20px;
+  padding: 15px;
+  display: grid;
+  grid-template-columns: repeat(3, 300px);
+  gap: 20px;
+  
+}
+.catalog .list-items ul li{
+  background-color:rgb(231, 230, 230);
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  max-width: 300px;
   display: flex;
   flex-direction:column;
   text-align: center;
+  border-radius: 5px;
 }
-.catalog section ul li .button {
+.catalog .list-items ul li .button {
     text-decoration-line: none;
-    padding: 15px;
+    margin: 10px;
     color: white;
     background-color: rgb(99, 98, 98);
     text-align: center;
     cursor: pointer;
     border-radius: 5px;
     font-size: 18px;
+    width: 250px;
+    
   }
-  .catalog section ul li .button:hover {
+  .catalog .list-items ul li .button:hover {
     background-color: #ddd;
     color: black;
   }
-  .catalog section ul li img{
-      width: 300px;
+  .catalog .list-items ul li img{
+      height: 300px;
+      width: 280px;
+      border-radius: 5px;
   }
-  .catalog section p {
+  
+  .cave-name{
+    font-family: Helvetica, sans-serif;
     font-weight: bold;
-    font-size: large;
-    text-align: center;
+    margin: 15px;
   }
+  .cave-location{
+    font-family: Helvetica, sans-serif;
+    font-size: 14px;
+    margin: 8px;
+  }
+  
