--- a/public/styles/navigation.css
+++ b/public/styles/navigation.css
@@ -3,12 +3,14 @@
     overflow: hidden;
   }
 .topnav a {
+  font-family: Helvetica, sans-serif;
     float: left;
     color: #f2f2f2;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-    font-size: 17px;
+    font-size: 20px;
+    letter-spacing: 0.8px;
   }
 .topnav a:hover {
     background-color: #ddd;
@@ -19,10 +21,12 @@
     color: white;
   }
 #user span{
+  font-family: Helvetica, sans-serif;
     float: right;
     color: #f2f2f2;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-    font-size: 17px;
+    font-size: 18px;
+    letter-spacing: 0.6px;
   }
