--- a/public/styles/catalog.css
+++ b/public/styles/catalog.css
@@ -1,3 +1,7 @@
+*{
+  font-family: Helvetica, sans-serif;
+  color: rgb(56, 56, 56);
+}
 .welcome{
   background-image: url(https://i.natgeofe.com/n/22e86334-d123-4a21-8180-f694bf2632d7/3563728_16x9.jpg);
   height: 50vh;
@@ -8,7 +12,7 @@
 }
 #descr{
   font-family: Helvetica, sans-serif;
-  color: #E7E6E6;
+  color: white;
     text-align: center;
     margin: 5px;
     padding: 20px;
@@ -20,14 +24,16 @@
     line-height: 1.5;
     letter-spacing: 1px;
     font-size: 18px;
-
+}
+#descr b{
+color: white;
 }
 #transp{
   width: 100%;
   height: 100%;
   background-color: gray;
   position:absolute;
-  opacity: 0.5;
+  opacity: 0.4;
   top:0;
   bottom: 0;
   left: 0;
@@ -64,6 +70,7 @@
   .catalog .list-items ul li .button:hover {
     background-color: #ddd;
     color: black;
+    transition: 0.3s;
   }
   .catalog .list-items ul li img{
       height: 300px;
