--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -3,5 +3,6 @@
 @import 'all.css';
 @import 'catalog.css';
 @import 'my-visits.css';
-@import 'details.css'
-
+@import 'details.css';
+@import 'news.css';
+@import 'news-details.css'
