--- a/public/styles/catalog.css
+++ b/public/styles/catalog.css
@@ -45,6 +45,8 @@ color: white;
   display: grid;
   grid-template-columns: repeat(4, 300px);
   gap: 20px;
+  align-items: center;
+  justify-content: center;
   
 }
 .catalog .list-items ul li{
