--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -5,4 +5,5 @@
 @import 'my-visits.css';
 @import 'details.css';
 @import 'news.css';
-@import 'news-details.css'
+@import 'news-details.css';
+@import url('https://use.fontawesome.com/releases/v5.15.4/css/all.css');
