--- a/public/styles/details.css
+++ b/public/styles/details.css
@@ -1,3 +1,4 @@
+
 #details-page{
     margin: 10px 20px ;
     padding: 10px 20px ;
@@ -10,8 +11,14 @@ text-align: left;
    margin : 10px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   max-width: 500px;
+  height: 400px;
 }
+#info-cave h3, #info-cave p {
+  text-align: left;
+}
+
  .button {
+   margin-left: 10px;
     text-decoration-line: none;
     padding: 15px;
     color: white;
@@ -31,8 +38,14 @@ text-align: left;
    margin : 10px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   width: 500px;
+  height: 400px;
   }
-  .act{
-    margin: 10px 20px ;
+  #act{
+    margin: 80px 20px ;
   padding: 10px 20px ;
+  
   }
+i{
+  font-size: 18px;
+  padding-right: 10px;
+}
