--- a/public/styles/forms.css
+++ b/public/styles/forms.css
@@ -1,15 +1,15 @@
 form legend{
-    text-align: center;
+    text-align: left;
     margin:  10px;
   padding: 10px ;
   font-weight: bold;
 }
-  form {
-    text-align: center;
-    margin:  10px 200px 100px 300px;
-    padding: 10px 200px 100px 100px;
+#create-form fieldset{
+  margin: 40px 150px;
+  padding: 20px 30px;
+  width: 350px;
 }
-form .button-submit {
+#create-form .button-submit {
     text-decoration-line: none;
     padding: 10px;
     color: white;
@@ -18,19 +18,30 @@ form .button-submit {
     cursor: pointer;
     border-radius: 5px;
     font-size: 15px;
+    width: 90px;
+    margin-top: 20px;
+    margin-bottom: 15px;
   }
   form .button-submit:hover {
     background-color: #ddd;
     color: black;
+    
   }
-  fieldset{
-    margin:  10px 20px;
-    padding: 40px 20px;
-  }
-
-form label {
-	font-weight: bold;
-}
 form span {
   color: red
+}
+#create-form label, #create-form input, #create-form span,#create-form textarea{
+  display: flex;
+  padding: 5px 10px;
+  margin: 5px 20px;
+}
+ 
+  
+
+#create-form textarea{
+  width: 250px;
+  height: 100px;
+}
+#create-form input{
+  width: 250px;
 }
