--- a/public/styles/details.css
+++ b/public/styles/details.css
@@ -31,6 +31,7 @@ text-align: left;
   .button:hover {
     background-color: #ddd;
     color: black;
+    transition: 0.3s;
   }
   
   #details-img{
