--- a/public/styles/navigation.css
+++ b/public/styles/navigation.css
@@ -15,6 +15,7 @@
 .topnav a:hover {
     background-color: #ddd;
     color: black;
+    transition: 0.3s;
   }
 .topnav a.active {
     background-color: #04AA6D;
