--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -7,3 +7,4 @@
 @import 'news.css';
 @import 'news-details.css';
 @import url('https://use.fontawesome.com/releases/v5.15.4/css/all.css');
+/* make some change */
